--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,24 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="refresh">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 
+    <string name="pref_city_id">City Id</string>
+    <string name="pref_city_id_dialog">Type City Id</string>
+    <string name="pref_city_id_default_value" translatable="false">1838716</string>
+    <string name="pref_unit">Unit</string>
+    <string name="pref_unit_dialog">Select Unit</string>
+    <string name="pref_unit_default_value" translatable="false">metric</string>
+    <string-array name="pref_unit_entry">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+    <string-array name="pref_unit_entry_value">
+        <item>metric</item>
+        <item>imperial</item>
+    </string-array>
+
+    <string name="web">Open In Web Browser</string>
+    <string name="share">Share</string>
 </resources>
